# these are the headers for your project
noinst_HEADERS = quregexmm.h QuRegexStorage.h quregexstorage.h

#########################################################################
# APPLICATION SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = quregexmm

# the application source, library search path, and link libraries
quregexmm_SOURCES = quregexmm.cpp
quregexmm_LDFLAGS = $(WX_LIBS) 

